
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorry"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <LinearLayout
            android:id="@+id/network_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_network"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/wifi_settings"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wifi_settings" />
                
                <Button
                    android:id="@+id/data_settings"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/data_settings" />

            </LinearLayout>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/website_problems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/website_problems"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/test_website"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/goto_website" />

        </LinearLayout>

        
    </LinearLayout>
